--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -37,7 +37,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                    <input type="text" placeholder="Datum eingeben..." oninput="updateVal(this)">
+                    <input type="text" placeholder="Datum eingeben..." oninput="updateVal(this)" id="uindat">
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <button class="btn btn-success" id="newdash">Nach vorgegebenen Daten filtern</button>
 
