Range Slider Update

--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -74,12 +74,12 @@
                                     </div>
                                     <div>
                                         <span id="s" style="padding-left:2px">Start:</span>
-                                        <input oninput="updateStart(this)" type="range" id="start" min="0" max="11">
+                                        <input oninput="updateStart(this)" width="5000px" type="range" id="start" min="0" max="1577">
                                         <span id="starttime">Jun</span>
                                     </div>
                                     <div>
                                         <span id="e" style="padding-left:2px">Ende:</span>
-                                        <input oninput="updateEnd(this)" type="range" id="end" min="0" max="11">
+                                        <input oninput="updateEnd(this)" type="range" id="end" min="0" max="1577">
                                         <span id="endtime">Jun</span>
                                     </div>
 
