--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -103,7 +103,17 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <canvas height="111" id="poschart"></canvas>
+                                        <canvas height="100" id="poschart"></canvas>
+                                    </div>
+                                    <div>
+                                        <span id="s2" style="padding-left:2px">Start:</span>
+                                        <input oninput="updateStart2(this)" width="5000px" type="range" id="start2" min="0" max="1577">
+                                        <span id="starttime2">Jun</span>
+                                    </div>
+                                    <div>
+                                        <span id="e2" style="padding-left:2px">Ende:</span>
+                                        <input oninput="updateEnd2(this)" type="range" id="end2" min="0" max="1577">
+                                        <span id="endtime2">Jun</span>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +132,17 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <canvas height="111" id="sentimentschart"></canvas>
+                                        <canvas height="100" id="sentimentschart"></canvas>
+                                    </div>
+                                    <div>
+                                        <span id="s3" style="padding-left:2px">Start:</span>
+                                        <input oninput="updateStart3(this)" width="5000px" type="range" id="start3" min="0" max="1577">
+                                        <span id="starttime3">Jun</span>
+                                    </div>
+                                    <div>
+                                        <span id="e3" style="padding-left:2px">Ende:</span>
+                                        <input oninput="updateEnd3(this)" type="range" id="end3" min="0" max="1577">
+                                        <span id="endtime3">Jun</span>
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +161,17 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <canvas height="111" id="namedentchart"></canvas>
+                                        <canvas height="100" id="namedentchart"></canvas>
+                                    </div>
+                                    <div>
+                                        <span id="s4" style="padding-left:2px">Start:</span>
+                                        <input oninput="updateStart4(this)" width="5000px" type="range" id="start4" min="0" max="1577">
+                                        <span id="starttime4">Jun</span>
+                                    </div>
+                                    <div>
+                                        <span id="e4" style="padding-left:2px">Ende:</span>
+                                        <input oninput="updateEnd4(this)" type="range" id="end4" min="0" max="1577">
+                                        <span id="endtime4">Jun</span>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +190,17 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        <canvas height="111" id="speakerchart"></canvas>
+                                        <canvas height="100" id="speakerchart"></canvas>
+                                    </div>
+                                    <div>
+                                        <span id="s5" style="padding-left:2px">Start:</span>
+                                        <input oninput="updateStart5(this)" width="5000px" type="range" id="start5" min="0" max="1577">
+                                        <span id="starttime5">Jun</span>
+                                    </div>
+                                    <div>
+                                        <span id="e5" style="padding-left:2px">Ende:</span>
+                                        <input oninput="updateEnd5(this)" type="range" id="end5" min="0" max="1577">
+                                        <span id="endtime5">Jun</span>
                                     </div>
                                 </div>
                             </div>
