Allgemeiner Filter Vorbereitung

--- a/startbootstrap-sb-admin-2-gh-pages/index.html
+++ b/startbootstrap-sb-admin-2-gh-pages/index.html
@@ -37,9 +37,10 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                    <input type="text" placeholder="Datum eingeben..." oninput="updateVal(this)" id="uindat">
+                    <input type="text" placeholder="Suchstring eingeben..." oninput="updateVal(this)" id="uindat">
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <button class="btn btn-success" id="newdash">Nach vorgegebenen Daten filtern</button>
+                    <button class="btn btn-warning" id="closedash">Unter-Dashboard schließen</button>
 
                 </nav>
 
